--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "css:build": "sass sass/main.scss:css/style.css",
-    "sass:watch": "sass --watch sass/main.scss:css/style.css"
+    "css:build": "sass scss/main.scss:css/style.css",
+    "sass:watch": "sass --watch scss/main.scss:css/style.css"
   },
   "keywords": [],
   "author": "",
