--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "css:build": "sass scss/main.scss:css/style.css",
-    "sass:watch": "sass --watch scss/main.scss:css/style.css"
+    "sass:watch": "sass --watch ./scss/main.scss:./css/style.css"
   },
   "keywords": [],
   "author": "",
